--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,8 +3,13 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
+  height: 100vh;
   padding: 2rem;
   font-weight: normal;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
 
 a,
@@ -28,8 +33,8 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    /* display: grid; */
+    /* grid-template-columns: 1fr 1fr; */
     padding: 0 2rem;
   }
 }
